fix: improve mobile spacing to prevent sideways scroll

--- a/oregoninvasiveshotline/static/css/main.css
+++ b/oregoninvasiveshotline/static/css/main.css
@@ -158,7 +158,7 @@ select[multiple] {
 
 #sponsors a {
     display:inline-block;
-    width:33%;
+    height: 90px;
     text-align:center;
 }
 
